--- a/InSb_BandGap_Estimation.ipynb
+++ b/InSb_BandGap_Estimation.ipynb
@@ -97,14 +97,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 36
         },
-        "outputId": "ac7d6c19-f05f-4ee6-d24d-4f4f33857aef"
+        "outputId": "7e1b7ca0-d361-4602-8bb3-f1f36c6fb3c3"
       },
       "cell_type": "code",
       "source": [
         "insb = mpr.get_dataframe(criteria={'pretty_formula': 'InSb'}, properties=properties)\n",
         "print('Number of binary compounds extracted = {}'.format(len(insb)))"
       ],
-      "execution_count": 4,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
@@ -121,7 +121,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 258
+          "height": 238
         },
         "outputId": "f82c34d4-cf41-4b8c-b6f3-f0ea3cc6814d"
       },
@@ -257,15 +257,16 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 258
+          "height": 363
         },
-        "outputId": "dbce5553-f3c9-40d1-a669-5e51cb4a714a"
+        "outputId": "342bce6d-57a7-47e6-e688-a79857f9eaf4"
       },
       "cell_type": "code",
       "source": [
-        "insb.head()"
+        "# Originaly all of the data of band gap in the database is zero!\n",
+        "insb"
       ],
-      "execution_count": 7,
+      "execution_count": 39,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -366,6 +367,50 @@
               "      <td>55.204131</td>\n",
               "      <td>2</td>\n",
               "    </tr>\n",
+              "    <tr>\n",
+              "      <th>mp-10149</th>\n",
+              "      <td>InSb</td>\n",
+              "      <td>Fm-3m</td>\n",
+              "      <td>0.020779</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.147875</td>\n",
+              "      <td>6.765321</td>\n",
+              "      <td>58.067758</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>mp-19744</th>\n",
+              "      <td>InSb</td>\n",
+              "      <td>Pmm2</td>\n",
+              "      <td>0.065197</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.192293</td>\n",
+              "      <td>6.693283</td>\n",
+              "      <td>58.692722</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>mp-21210</th>\n",
+              "      <td>InSb</td>\n",
+              "      <td>Cmcm</td>\n",
+              "      <td>0.022714</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.149810</td>\n",
+              "      <td>6.792776</td>\n",
+              "      <td>115.666110</td>\n",
+              "      <td>4</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>mp-20253</th>\n",
+              "      <td>InSb</td>\n",
+              "      <td>Cmcm</td>\n",
+              "      <td>-0.006128</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.120968</td>\n",
+              "      <td>6.771521</td>\n",
+              "      <td>348.087529</td>\n",
+              "      <td>12</td>\n",
+              "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
@@ -377,13 +422,17 @@
               "mp-569020             InSb              Pmmn                   0.009746       0.0      0.136842  6.935338  113.288489       4\n",
               "mp-20012              InSb             F-43m                  -0.127096       0.0      0.000000  5.384060   72.964821       2\n",
               "mp-1007661            InSb            P6_3mc                  -0.115320       0.0      0.011776  5.369502  146.325303       4\n",
-              "mp-10148              InSb             Pm-3m                   0.110811       0.0      0.237906  7.116261   55.204131       2"
+              "mp-10148              InSb             Pm-3m                   0.110811       0.0      0.237906  7.116261   55.204131       2\n",
+              "mp-10149              InSb             Fm-3m                   0.020779       0.0      0.147875  6.765321   58.067758       2\n",
+              "mp-19744              InSb              Pmm2                   0.065197       0.0      0.192293  6.693283   58.692722       2\n",
+              "mp-21210              InSb              Cmcm                   0.022714       0.0      0.149810  6.792776  115.666110       4\n",
+              "mp-20253              InSb              Cmcm                  -0.006128       0.0      0.120968  6.771521  348.087529      12"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 39
         }
       ]
     },
@@ -407,7 +456,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 320
+          "height": 300
         },
         "outputId": "47f3be93-d353-4aa0-912c-0a4682c8edb2"
       },
@@ -549,7 +598,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 320
+          "height": 300
         },
         "outputId": "263c02a0-89da-4f13-f1b6-f1124f56d292"
       },
